Control retweeting with environment variable

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch with local environment",
+            "name": "Launch dev",
             "program": "${workspaceRoot}/node_modules/node-lambda/bin/node-lambda",
             "cwd": "${workspaceRoot}",
             "args": ["run", "--configFile", "${workspaceRoot}/local.env"]
@@ -15,7 +15,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch with live environment",
+            "name": "Launch live",
             "program": "${workspaceRoot}/node_modules/node-lambda/bin/node-lambda",
             "cwd": "${workspaceRoot}",
             "args": ["run", "--configFile", "${workspaceRoot}/live.env"]
